oss-knowledge-gitops/backend/orchestrator/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: orchestrator
spec:
    rules:
        - host: oss-knowledge-orchestrator-dev.4.230.158.187.nip.io
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: dev-orchestrator
                            port:
                                number: 8000
